--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -9,54 +9,18 @@
 	<title>Multi-page template</title>
 
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+<link rel="stylesheet" 
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+      crossorigin="anonymous">
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
-<script>
-$( "#loginButton" ).click(function() {
-      var un = $( "#login_username" ).val();
-      console.log(un);
-      
-      var pw = $( "#login_pass" ).val();
-      console.log(pw);
-      
-      $.post( "/backend", { type: "login", username:un, password:pw})
-     .done(function( data ) {
-        alert( "Data Loaded: " + data );
-        
-        if(data == 'customer'){
-            window.location="/index#products";
-        }
-        else if(data == 'driver'){
-            window.location="/index#driver";
-        }        
-       });
-});
-
-$( "#registerButton" ).click(function() {
-  
-      var un = $( "#username" ).val();
-      console.log(un);
-      
-      var pw = $( "#pass" ).val();
-      console.log(pw);
-      
-      var at = $( "#acctype" ).val();
-      console.log(at);
-      $.post( "/backend", { type: "register", username:un, password:pw, acctype:at})
-     .done(function( data ) {
-        alert( "Data Loaded: " + data );
-       });
-
-  //alert( "register button pressed!" );
-});
-</script>
 
 </head>
 
 <body>
 
-<!-- Start of first page: #one -->
 <div data-role="page" id="">
 	<div data-role="header">
 		<h1>Multi-page</h1>
@@ -86,7 +50,6 @@ $( "#registerButton" ).click(function() {
 	</div><!-- /content -->
 </div>
 
-
 <div data-role="page" id="register" data-theme="a">
        <div data-role="header">
 		<h1>Register</h1>
@@ -100,7 +63,6 @@ $( "#registerButton" ).click(function() {
 	</div><!-- /content -->
 </div>
 
-
 <div data-role="page" id="products" data-theme="a">
       <div data-role="header">
 		<h1>Products</h1>
@@ -108,36 +70,205 @@ $( "#registerButton" ).click(function() {
 
       <div role="main" class="ui-content">
 		<h2>Products</h2>
-       
-	</div><!-- /content -->
-</div>
+
+		<div>
+		<table data-role="table" id="products-table" data-mode="columntoggle" data-column-btn-theme="a" class="ui-shadow table-stroke">
+          <tbody>
+             
+        </tbody>
+      </table>
+		</div>
 
 <div data-role="page" id="add-products" data-theme="a">
       <div data-role="header">
 		<h1>Add Products</h1>
+	
+
+	
+</div>
+
+<div data-role="page" id="add-orders" data-theme="a">
+      <div data-role="header">
+		<h1>Order Processing</h1>
       </div><!-- /header -->
       <div role="main" class="ui-content">
-		<h2>Add Products</h2>
-	    Name <input type="text" name="name" id="name" value="">
-        Type <input type="text" name="type" id="type" value="">
-        Price <input type="text" name="price" id="price" value="">
-		Image <input type="file" name="image" id="image" value="">
-       <button class="ui-btn" id="addProductButton">Submit</button>
+		<h2>Order Processing</h2>
+	     User <input type="text" name="user_id" id="user_id" value="">
+        Product <input type="text" name="prd_id" id="prd_id" value="">
+        Quantity <input type="text" name="quantity" id="quantity" value="">
+        Address <input type="text" name="address" id="address" value="">
+        Phone <input type="text" name="phone" id="phone" value="">
+        Status <input type="text" name="status" id="status" value="">
+       <button class="ui-btn" id="addOrderButton">Submit</button>
 	</div><!-- /content -->
 </div>
 
+<div data-role="page" id="driver" data-theme="a">
+      <div data-role="header">
+		<h1>Driver</h1>
+      </div><!-- /header -->
+
+      <div role="main" class="ui-content">
+		<h2>Driver</h2>
+       
+	</div><!-- /content -->
+</div>
+
+<div data-role="page" id="orderSummary" data-theme="a">
+      <div data-role="header">
+		<h1>Order Summary</h1>
+      </div><!-- /header -->
+
+      <div role="main" class="ui-content">
+		<h2>Order Summary</h2>
+       
+	</div><!-- /content -->
+</div>
+
+<div data-role="page" id="currentOrders" data-theme="a">
+      <div data-role="header">
+		<h1>Current Orders</h1>
+      </div><!-- /header -->
+
+      <div role="main" class="ui-content">
+		<h2>Current Orders</h2>
+       
+	</div><!-- /content -->
+</div>
+
+<div data-role="page" id="manager" data-theme="a">
+      <div data-role="header">
+		<h1>Manager</h1>
+      </div><!-- /header -->
+      <div role="main" class="ui-content">
+		<h2>Manager</h2>
+      <a href="/index#orderSummary" data-role="button" data-iconpos="right" data-mini="true" data-inline="true">Order Summary</a>
+      <a href="/index#add-products" data-role="button" data-iconpos="right" data-mini="true" data-inline="true">Add New Product</a>
+      <a href="/index#currentOrders" data-role="button" data-iconpos="right" data-mini="true" data-inline="true">View Current Orders</a>
+</div>
+
 <script>
+$( "#loginButton" ).click(function() {
+      var un = $( "#login_username" ).val();
+      console.log(un);
+      
+      var pw = $( "#login_pass" ).val();
+      console.log(pw);
+      
+      $.post( "/backend", { type: "login", username:un, password:pw})
+     .done(function( data ) {
+        alert( "Data Loaded: " + data );
+        
+        if(data == 'customer'){
+            window.location="/index#products";
+        }
+        else if(data == 'driver'){
+            window.location="/index#driver";
+        }
+        else if(data == 'manager'){
+            window.location="/index#manager";
+        }          
+       });
+});
+
+$( "#registerButton" ).click(function() {
+  
+      var un = $( "#username" ).val();
+      console.log(un);
+      
+      var pw = $( "#pass" ).val();
+      console.log(pw);
+      
+      var at = $( "#acctype" ).val();
+      console.log(at);
+      $.post( "/backend", { type: "register", username:un, password:pw, acctype:at})
+     .done(function( data ) {
+        alert( "Data Loaded: " + data );
+       });
+
+       //alert( "register button pressed!" );
+});
+   //Add a Product to the Products Database
  $("#addProductButton").click(function() {
  	 alert( "add product button pressed!" );
       var pname = $( "#name" ).val();
       var ptype = $( "#type" ).val();
-	  var pprice = $( "#price" ).val();
-	  var pimage = btoa($( "#image" )[0].files[0]);  //converting image file to base64
-     $.post( "/backend", { type: "add", name: pname, ptype: ptype, price: pprice, image: pimage})
+	   var pprice = $( "#price" ).val();
+	   var pimage = btoa($( "#image" )[0].files[0]);  //converting image file to base64
+      var psize = $( "#size" ).val();
+      $.post( "/products", { type: "add", name: pname, ptype: ptype, price: pprice, image: pimage, size: psize})
 	 .done(function( data ) {
         alert( "Data Loaded: " + data );
        });
 });
+
+  //Process Orders
+ $("#addOrderButton").click(function() {
+ 	 alert( "add orders button pressed!" );
+      var userId = $( "#userId" ).val();
+      var prdId = $( "#prdId" ).val();
+	   var quantity = $( "#quantity" ).val();
+      var address = $( "#address" ).val();
+      var phone = $( "#phone" ).val();
+      var status = $( "#status" ).val();
+      $.post( "/orders", { type: "orders", userId: userId, prdId: prdId, quantity: quantity, 
+         address: address, phone: phone, status: status})
+	 .done(function( data ) {
+        alert( "Data Loaded: " + data );
+       });
+});
+
+//get products when page loads
+{# $('#products').on('pageinit', function() { #}
+
+var items = [];
+
+function addToCart(pizzaId, name){
+   var quantity = $('#quantity'+pizzaId+'').val();
+   items.push({"id":pizzaId, "name": name, "quantity": quantity});
+   console.log(items);
+   sessionStorage.setItem('cartItems', JSON.stringify(items)); 
+
+   console.log(JSON.stringify(sessionStorage.getItem('cartItems')));
+}
+
+$(document).on('pagebeforeshow','#products' ,function(e,data){  
+	 $.get( "/products/getProducts")
+	 .done(function(results) {
+        $(results).each(function(index, result) {
+				 /// populate table using jquery
+            let productBody = `
+               <tr>
+               <td>
+                  <div data-role="content">
+                     <div class="ui-grid-a" id="">	
+                        <div class="ui-block-a">
+                              <h1>${result.name}</h1>
+                              <img src="../images/hawaiian.jpg">
+                              <p><strong> Price: ${result.price}</strong></p>
+                        </div>
+                        <div class="ui-block-b">
+                           <fieldset data-role="controlgroup" data-mini="true">
+                              <label for="size">Size</label>
+                              <label>${result.size}</label>
+                              <label for="quantity">Quantity</label>
+                              <input name="quantity" id="quantity${result.id}" type="number" min="0"/>
+                              <label for="addToCart"></label>
+                              <input type="button" id="btn${result.id}" name="addToCart" value="Add to cart" onclick="addToCart(${result.id}, '${result.name}')"/>
+                           </fieldset>
+                        </div>		
+               <td>
+             </tr>
+            `;
+            $('#products-table > tbody:last-child').append(productBody);
+			});
+       });
+
+});
+
+
+
+
 </script>
 
 
